phpfusion/squad.yml
apiVersion: v1
kind: Service
metadata:
  name: squad
  labels:
    run: squad
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: public
  selector:
    run: squad
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squad
spec:
  selector:
    matchLabels:
      run: squad
  replicas: 1
  template:
    metadata:
      labels:
        run: squad
    spec:
      containers:
      - name: squad
        image: anrop/anrop-squad
        ports:
          - containerPort: 8080
      restartPolicy: Always
