phpfusion/steam-workshop.yml
apiVersion: v1
kind: Service
metadata:
  name: steam-workshop
  labels:
    run: steam-workshop
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: public
  selector:
    run: steam-workshop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steam-workshop
spec:
  selector:
    matchLabels:
      run: steam-workshop
  replicas: 1
  template:
    metadata:
      labels:
        run: steam-workshop
    spec:
      containers:
      - name: steam-workshop
        image: anrop/anrop-steam-workshop
        ports:
          - containerPort: 8080
      restartPolicy: Always
