phpfusion/streams.yml
apiVersion: v1
kind: Service
metadata:
  name: streams
  labels:
    run: streams
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: public
  selector:
    run: streams
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streams
spec:
  selector:
    matchLabels:
      run: streams
  replicas: 1
  template:
    metadata:
      labels:
        run: streams
    spec:
      containers:
      - name: streams
        image: anrop/anrop-streams
        ports:
          - containerPort: 8080
      restartPolicy: Always
