phpfusion/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: services
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - api.anrop.se
      - new.anrop.se
      - playwithsix.anrop.se
      - steam-workshop.anrop.se
      - streams.anrop.se
      - squad.anrop.se
      secretName: phpfusion-tls
  rules:
    - host: api.anrop.se
      http:
        paths:
        - backend:
            serviceName: api
            servicePort: 8080
    - host: new.anrop.se
      http:
        paths:
        - backend:
            serviceName: frontend
            servicePort: 8080
    - host: playwithsix.anrop.se
      http:
        paths:
        - backend:
            serviceName: playwithsix
            servicePort: 8080
    - host: steam-workshop.anrop.se
      http:
        paths:
        - backend:
            serviceName: steam-workshop
            servicePort: 8080
    - host: streams.anrop.se
      http:
        paths:
        - backend:
            serviceName: streams
            servicePort: 8080
    - host: squad.anrop.se
      http:
        paths:
        - backend:
            serviceName: squad
            servicePort: 8080
